Chapter4: Rails-flavored Ruby

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,7 @@
 <% provide :title, t(".home") %>
-<h1><%= t ".home" %></h1>
+<h1><%= t ".sample_app" %></h1>
 <p>
-  <%= t ".home" %>
+  <%= t ".home_pages" %>
   <%= link_to t("tutorial"), "http://www.railstutorial.org/" %>
   <%= t ".sample_application" %>
 </p>
