Chapter5: Filling in the layout

--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,5 +1,5 @@
 <% provide :title, t(".help") %>
-<h1><%= t "help_app" %></h1>
+<h1><%= t ".help_app" %></h1>
 <p>
   <%= t "help_app" %>
   <%= link_to t(".tutorial"), "http://www.railstutorial.org/" %>
